# FederatedLeaning

./: .gitignore  CLAUDE.md  GEMINI.md  app.py  cleanup_logs.py  client.py  config.py  dataset.py  fed-avg.py  logger.py  main.py  model.py  pyproject.toml  server.py  setup_data.py
